--- a/index.html
+++ b/index.html
@@ -49,9 +49,26 @@
                 <div class="row">
 
                     <section class="col-md-8">
-                        Covid - CODE HERE
-
-
+                        <div class="container">
+                            <h1 class="text-center mt-5">Live Data: COVID-19</h1>
+                            <br>
+                            <table class="table">
+                                <thead class="thead-dark text-center">
+                                    <tr>
+                                        <th scope="col">Total Cases</th>
+                                        <th scope="col">Total Deaths</th>
+                                        <th scope="col">Total Recovered</th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                  <tr id="data" style="text-align: center;">
+                                  </tr>
+                                </tbody>
+                            </table>
+                            <button id="refreshCovid" class="btn btn-danger btn-block">
+                                Refresh Data
+                            </button>
+                        </div>
                     </section>
 
                     <section class="col-md-4">
@@ -72,12 +89,27 @@
 
             <!-- Section Title -->
             <div class="container-md mt-3 title">
-                News
+                Latest News
             </div>
 
             <!-- NEWS CONTAINER-->
-            <section class="container-md articles">
-                News Articles - CODE HERE
+            <div class="container-md articles">
+                <div class="row">
+                    <div class="col-md-6" id="main">
+                        <div id="newest">
+
+                        </div>
+                    </div>
+
+
+                    <div class="col-md-6" id="listings">
+                        <ul id="list" data-role="listview"></ul>
+                        <div id="list">
+
+                            <a href="News.html"><button type="button" class="btn btn-light btn-xs">More Stories</button></a>
+                        </div>
+                    </div>
+            </div>
 
 
             </section>
@@ -94,9 +126,20 @@
             <div class="container-md mt-3 title">
                 Travel
             </div>
-
             <!-- FORM & MAP CONTAINER-->
-            
+            <div class="container-md">
+                <div class="row">
+                    <section class="col-md-6 form">
+                        <div
+                            data-skyscanner-widget="SearchWidget"
+                            data-locale="en-GB"
+                            data-market="GB"
+                            data-currency="GBP"
+                        ></div>
+                                <script src="https://widgets.skyscanner.net/widget-server/js/loader.js" async></script>
+                    </section>
+
+                    <section class="col-md-6 map">
                         Google Map - CODE HERE
 
 
@@ -109,13 +152,14 @@
 
     </main>
 
+    <br><div><h6 style="text-align: center;">Stories Gathered From The Following API:<a href="https://newsapi.org/"> News API.</a></h6></div>
+
 
     <!--========== SCRIPTS ==========-->
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
 
-    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
-
+    <script src='https://code.jquery.com/jquery-3.4.1.min.js'></script>
 
     <script type="text/javascript" src="assets/script.js"></script>
 
